# gaia

./: .gitignore  Cargo.toml  README.md  build.rs
assetgen/: Cargo.toml  README.md
assetgen/examples/: demo.rs
assetgen/src/: imagemagick.rs  lib.rs
examples/: camera_controller.rs  demo.rs
quadtree/: Cargo.toml
quadtree/src/: lib.rs
scripts/: download_world_assets  generate_world_assets
src/: asset_getter.rs  camera_controller.rs  constants.rs  index_getter.rs  lib.rs  main.rs  renderer.rs  texture_getter.rs  tile.rs  tile_asset_getter.rs  tile_chooser.rs  tile_fetcher.rs  tile_getter.rs  vertex.rs  vertex_getter.rs
src/render/: mod.rs  polygon.rs  terrain.rs
src/shaders/: foobar.glslf  foobar.glslv  terrain.glslf  terrain.glslv
