[package]
name = "gaia"
version = "0.1.0"
authors = ["Ulysse Carion <ulysse@ulysse.io>"]

[build-dependencies]
pretty_env_logger = "0.1"
gaia_assetgen = { path = "../gaia_assetgen" }

[dependencies]
byteorder = "1"
cgmath = "0.15"
collision = "0.12"
error-chain = "0.10"
fps_counter = "0.2"
gaia_assetgen = { path = "../gaia_assetgen" }
gfx = "0.16"
gfx_draping = "0.1"
image = "0.13"
lazy_static = "0.2"
lru-cache = "0.1.1"
piston = "0.32"
piston3d-cam = "0.3"
piston_window = "0.66"
serde_json = "1.0"
vecmath = "0.3"
