[package]
name = "gaia"
version = "0.1.0"
authors = ["Ulysse Carion <ulysse@ulysse.io>"]

[dependencies]
byteorder = "1"
cgmath = "0.15"
collision = "0.12"
error-chain = "0.10"
fps_counter = "0.2"
gaia_assetgen = "0.3.1"
gaia_quadtree = "0.1.7"
gfx = "0.17"
gfx_draping = "0.3"
gfx_glyph = "0.9"
hsl = "0.1"
image = "0.18"
lru-cache = "0.1.1"
piston = "0.36"
piston3d-cam = "0.3"
piston_window = "0.77"
serde_json = "1.0"
vecmath = "0.3"

[workspace]
