[package]
name = "gaia_assetgen"
description = "Prepares Gaia assets, for use in build scripts"
license = "MIT"
repository = "https://github.com/ucarion/gaia"
documentation = "https://docs.rs/gaia_assetgen"
version = "0.3.1"
authors = ["Ulysse Carion <ulyssecarion@gmail.com>"]

[dependencies]
error-chain = "0.11"
geo = "0.4"
geojson = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
tempdir = "0.3"
