[package]
name = "gaia_quadtree"
description = "A Quadtree implementation for use within Gaia"
version = "0.1.7"
authors = ["Ulysse Carion <ulyssecarion@gmail.com>"]
repository = "https://github.com/ucarion/gaia"
documentation = "https://docs.rs/gaia_quadtree"
license = "MIT"

[dependencies]
num = "0.1"
